<resources>
    <string name="app_name">Football Club Final</string>
    <string name="detailteam">Detail Team</string>
    <string name="detailplayer">Detail Player</string>
    <string name="findTeam">Find Team</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>

    <string name="dateitem">Minggu, 27 Juli 2018</string>
    <string name="clubhome">Barcelona</string>
    <string name="homescore">2</string>
    <string name="vs">VS</string>
    <string name="scoreaway">1</string>
    <string name="clubaway">Real Madrid</string>
    <string name="nameclub">Barcelona FC</string>
    <string name="goals">Goal Kicker</string>
    <string name="red">Red Card</string>
    <string name="yellow">Yellow Card</string>
    <string name="berat">Berat (KG)</string>
    <string name="tinggi">Tinggi (M)</string>
    <string name="overview">Overview and Player</string>
    <string name="toFavorite">Added to favorite</string>
    <string name="deleteFavorite">Delete from favorite</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
