<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:padding="16dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="8dp">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/dateitem"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/club_home"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            tools:text="@string/clubhome"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/score_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/white"
            tools:text="@string/homescore"/>

        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="@string/vs"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="16sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/score_away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            tools:text="@string/scoreaway"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/club_away"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:fontFamily="@font/montserrat_regular"
            tools:text="@string/clubaway"
            android:textSize="14sp"
            android:textColor="@color/white"/>
    </LinearLayout>
</android.support.v7.widget.CardView>